app/prod/prod_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: www-page-prod-route
  labels:
    app: aaa-application-prod
    app.kubernetes.io/component: aaa-application-prod
    app.kubernetes.io/instance: aaa-application-prod
spec:
  to:  
    kind: Service
    name: aaa-application-prod-service
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
